change style in button up

--- a/week1/css/style.css
+++ b/week1/css/style.css
@@ -144,7 +144,7 @@ a{
 }
 .back-to-top-link {
     position: fixed;
-    position: -webkit-sticky;
+    /* position: -webkit-sticky; */
    /*position: sticky;*/ 
     pointer-events: all;
     top: calc(100vh - 5rem);
